--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Couchbase transport for winston.",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "./node_modules/mocha/bin/mocha",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,11 @@
   "bugs": {
     "url": "https://github.com/Computer-Know-how/winston-couchbase-2/issues"
   },
-  "homepage": "https://github.com/Computer-Know-how/winston-couchbase-2",
+  "homepage": "https://github.com/Computer-Know-how/winston-couchbase-2#readme",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
   "devDependencies": {
     "mocha": "^1.21.3",
     "should": "^4.0.4"
